# Ethernet_Modbus_TCP

./: CMakeLists.txt  brain.md  readme.md  sdkconfig.defaults
docs/: architecture.md  dependency_graph.md  test_strategy.md
main/: CMakeLists.txt  board.h  config.h  main.c  w550.h
scripts/: README.md
tests/: README.md
